เพิ่มfield ปรับUIของระบบจองห้อง - fix #194
