# backend/docs/swagger.json
@@ -3588,7 +3588,13 @@
         "controllers.Preemption": {
             "type": "object",
             "properties": {
-                "added": {
+                "otherpeopleid": {
+                    "type": "string"
+                },
+                "otherpeoplephone": {
+                    "type": "string"
+                },
+                "phoneuser": {
                     "type": "string"
                 },
                 "purpose": {
@@ -4024,8 +4030,20 @@
         "ent.Preemption": {
             "type": "object",
             "properties": {
+                "Phonenumber": {
+                    "description": "Phonenumber holds the value of the \"Phonenumber\" field.",
+                    "type": "string"
+                },
                 "PreemptTime": {
                     "description": "PreemptTime holds the value of the \"PreemptTime\" field.",
+                    "type": "string"
+                },
+                "Surrogateid": {
+                    "description": "Surrogateid holds the value of the \"Surrogateid\" field.",
+                    "type": "string"
+                },
+                "Surrogatephone": {
+                    "description": "Surrogatephone holds the value of the \"Surrogatephone\" field.",
                     "type": "string"
                 },
                 "edges": {
